Fixed some layout issues

--- a/src/components/ExpenseList.scss
+++ b/src/components/ExpenseList.scss
@@ -1,5 +1,7 @@
 .ExpenseList {
   @import '~styles/variables';
+  padding-bottom: 90px;
+
   .header {
     background: $cyan;
 
